@@ -2545,6 +2545,14 @@ def locator_params(axis='both', tight=False, **kwargs):
 
 # This function was autogenerated by boilerplate.py.  Do not edit as
 # changes will be lost
+@docstring.copy_dedent(Axes.margins)
+def margins(*args, **kw):
+    ret =  gca().margins(*args, **kw)
+    draw_if_interactive()
+    return ret
+
+# This function was autogenerated by boilerplate.py.  Do not edit as
+# changes will be lost
 def autumn():
     '''
     set the default colormap to autumn and apply to current image if any.
